<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/application_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/digital_fontfamily"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/application_name">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/red"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname_hint"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/red"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_hint"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/red"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:text=""
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/red"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:text=""
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/red"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text=""
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_hint"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/red"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/sign_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/auth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/reg_btn" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/sign_btn"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>